--- a/common.html
+++ b/common.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>サンプルページ</title>
+    <link href="https://fonts.googleapis.com/css2?family=Bitter&display=swap" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header>
