--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Portfolio | 風景写真家「SNAPPERS」</title>
     <link href="https://fonts.googleapis.com/css2?family=Bitter&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
